[package]
name = "defaultmap"
version = "0.5.1-alpha.0"
description = "Provides a HashMap with an automatic default for missing keys."
authors = ["Jelte Fennema <github-tech@jeltef.nl>"]
license = "MIT"
repository = "https://github.com/JelteF/defaultmap"
documentation = "https://docs.rs/defaultmap"
readme = "README.md"
edition = "2018"

keywords = ["dict", "defaultdict", "defaulthashmap", "hashmap", "default"]

categories = ["development-tools", "data-structures"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[badges]
travis-ci = { repository = "JelteF/defaultmap" }
appveyor = { repository = "JelteF/defaultmap" }

[features]
default = []
with-serde = ["dep:serde"]

[dependencies]
derive_more = { version = "=1.0.0-beta.3", features = ["debug"] }
dyn-clone = "1.0.13"
serde = { version = "1.0.0", features = ["derive"], optional = true}

[dev-dependencies]
serde_json = "1.0"
