[package]
name = "defaultmap"
version = "0.6.0"
edition = "2021"
rust-version = "1.71.0"
description = "Provides a HashMap with an automatic default for missing keys."
authors = ["Jelte Fennema <github-tech@jeltef.nl>"]
license = "MIT"
repository = "https://github.com/JelteF/defaultmap"
documentation = "https://docs.rs/defaultmap"
readme = "README.md"

keywords = ["dict", "defaultdict", "defaulthashmap", "hashmap", "default"]

categories = ["development-tools", "data-structures"]

include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[badges]
travis-ci = { repository = "JelteF/defaultmap" }
appveyor = { repository = "JelteF/defaultmap" }

[package.metadata.docs.rs]
features = ["with-serde"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
with-serde = ["dep:serde"]

[dependencies]
derive_more = { version = "=1.0.0-beta.6", features = ["debug"] }
dyn-clone = "1.0.13"
serde = { version = "1.0.183", features = ["derive"], optional = true}

[dev-dependencies]
serde_json = "1.0.105"
